# tucha

./: .gitignore  Cargo.toml  README.md
src/: main.rs  utils.rs
src/enums/: current_process.rs  mod.rs  new_process.rs  process_error.rs  process_result.rs
src/enums/process/: current.rs  error.rs  new.rs  result.rs
src/handlers/: client.rs  file.rs  mod.rs
src/handlers/process/: current.rs  error.rs  mod.rs  new.rs  result.rs
src/types/: api_keys.rs  client.rs  dir.rs  file.rs  file_metadata.rs  mod.rs  path.rs
src/types/file/: metadata.rs  mod.rs
src/ui/: window.rs
src/ui/tab/: api.rs  cloud.rs  mod.rs  new_session.rs
